--- a/resources/stage/web/creator_main.html
+++ b/resources/stage/web/creator_main.html
@@ -264,25 +264,25 @@
                <p id ="funds_raised" class="announcement-heading">?</p>
                <p class="announcement-text">Funds raised</p>
 
+               <p id="price_per_piece_current" class="announcement-heading">?</p>
+               <p class="announcement-text">Price per piece</p>
+
+               <p id="pieces_held_current" class="announcement-heading">?</p>
+               <p class="announcement-text">Pieces held</p>
+
                <p id ="worth_current" class="announcement-heading">?</p>
                <p class="announcement-text">Worth</p>
 
-               <p id="price_per_piece_current" class="announcement-heading">?2</p>
-               <p class="announcement-text">Price per piece current</p>
-
-               <p id="pieces_held_current" class="announcement-heading">?2</p>
-               <p class="announcement-text">Pieces held</p>
-
-               <p id="rewards_paid" class="announcement-heading">?2</p>
+               <p id="rewards_paid" class="announcement-heading">?</p>
                <p class="announcement-text">Rewards paid</p>
 
-               <p id="backers_current_count" class="announcement-heading">?2</p>
+               <p id="backers_current_count" class="announcement-heading">?</p>
                <p class="announcement-text">Backers</p>
 
-               <p id="creators_safety_current" class="announcement-heading">?2</p>
+               <p id="creators_safety_current" class="announcement-heading">?</p>
                <p class="announcement-text">Safety rating</p>
 
-               <p id="creators_reputation" class="announcement-heading">?2</p>
+               <p id="creators_reputation" class="announcement-heading">?</p>
                <p class="announcement-text">Reputation</p>
 
                
