starting on creators safety

--- a/resources/stage/web/creator_overview.html
+++ b/resources/stage/web/creator_overview.html
@@ -264,6 +264,19 @@
 
   </div>
 
+  <div class="row">
+    <div class="col-lg-6">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+        <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Creators safety</h3>
+        </div>
+        <div class="panel-body">
+          <div class = "small-chart" id="creators_safety"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 
   <!-- The main body -->
