A creators safety popover

--- a/resources/stage/web/creator_overview.html
+++ b/resources/stage/web/creator_overview.html
@@ -268,7 +268,10 @@
     <div class="col-lg-6">
       <div class="panel panel-primary">
         <div class="panel-heading">
-        <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Creators safety</h3>
+          <h3 id="creator_safety_popover" class="panel-title" data-trigger="hover"
+          data-container="body" data-toggle="popover" data-placement="bottom" 
+          data-content="The number of years a creator can pay their funders rewards, with the money they currently have
+          in their account. A history of greater than 5 is best."><i class="fa fa-bar-chart-o"></i> Creators safety rating</h3>
         </div>
         <div class="panel-body">
           <div class = "small-chart" id="creators_safety"></div>
