--- a/resources/stage/web/creator_main.html
+++ b/resources/stage/web/creator_main.html
@@ -273,6 +273,9 @@
                <p id ="worth_current" class="announcement-heading"></p>
                <p class="announcement-text">Worth</p>
 
+               <p id="rewards_current" class="announcement-heading"></p>
+               <p class="announcement-text">Reward / piece / year</p>
+
                <p id="rewards_paid" class="announcement-heading"></p>
                <p class="announcement-text">Rewards paid</p>
 
