--- a/resources/dev/web/creator_overview.html
+++ b/resources/dev/web/creator_overview.html
@@ -791,7 +791,7 @@
         </div>
         <form id="rewardForm" class="form-horizontal" role="form">
           <div class="form-group form-group-lg">
-            <label class="col-sm-2 control-label" for="formGroupInputLarge">Reward Percentage</label>
+            <label class="col-sm-2 control-label" for="formGroupInputLarge">Reward per piece per year</label>
             <div class="col-sm-10">
               <input name="reward_per_piece_per_year" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last reward"
               data-bv-greaterthan="true"
