got some responsive stuff with the main page done

--- a/resources/stage/web/creator_main.html
+++ b/resources/stage/web/creator_main.html
@@ -170,7 +170,7 @@
 
   <!-- The Page -->
   <div class="row-fluid">
-    <div class="col-md-8 col-md-offset-2" >
+    <div id="othermain_col" class="col-md-8 col-md-offset-2" >
 
 
 
