--- a/resources/stage/web/creator_overview.html
+++ b/resources/stage/web/creator_overview.html
@@ -166,11 +166,11 @@
   
 
   <!-- The sidebar -->
-  <div class="row col-md-10 col-md-offset-2"> 
+
 
 
     <!-- The Page -->
-    <div id="main_col" class="col-md-12 main">
+    <div id="main_col" class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main">
 
 
 
