testing a first-time user alert

--- a/resources/stage/web/userdashboard_overview.html
+++ b/resources/stage/web/userdashboard_overview.html
@@ -177,7 +177,14 @@
       </div>
     </div>
 
-
+    <div class="row">
+    <div class="col-lg-3">
+      <div class="first-timers alert alert-warning alert-dismissible hide" role="alert">
+        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <strong>You have no pieces!</strong> <a href="discover">Discover</a> some creators to fund.
+      </div>
+    </div>
+    </div>
 
 
 
@@ -459,7 +466,7 @@
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
             <div class="col-sm-10">
               <div class="input-group">
-              <div id="withdrawSymbol" class="input-group-addon">?</div>
+                <div id="withdrawSymbol" class="input-group-addon">?</div>
 
                 <input name="withdrawAmount" class="form-control" type="text" id="formGroupInputLarge" placeholder="Current funds"
                 data-bv-greaterthan="true"
