Starting to work on a frequently asked questions page

--- a/resources/stage/web/FAQ.html
+++ b/resources/stage/web/FAQ.html
@@ -79,16 +79,14 @@
         <li><a href="userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                <li><a href="#logout" class="hide">Log Out</a></li> -->
-               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                             <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li class="dropdown-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
+                  <li><a href="about">About Bitpieces</a></li>
+                  <li><a href="FAQ">Frequently Asked Questions</a></li>
+                  <li><a href="contact">Contact</a></li>
+                  
+
                 </ul>
               </li>
             </ul>
@@ -133,82 +131,71 @@
       <div class="col-md-3">
         <div class="affix" id="sidebar" role="complementary">
           <ul class="nav nav-tabs nav-stacked affix nav-list" id="mynav" data-spy="affix" data-offset-top="280">
-            <li><a href="#c1">
-              Content 1<i class="fa fa-chevron-right pull-right"></i>
-            </a>
-          </li>
-          <li> <a href="#c2"contenteditable="false">Content 2
-          </a>
-        </li>
-        <li> <a href="#c3"contenteditable="false">Content 3
-        </a>
-      </li>
-      <li> <a href="#c4"  contenteditable="false">Content 4
-      </a>
-    </li>
-    <li> <a href="#c5"contenteditable="false">Content 5
-    </a>
-  </li>
-</ul>
-</div>
-</div>
-<div class="col-md-9" id="mycontent">
-  <div id="c1">
-    <h2 class="">Content 1</h2>
-    At Bootply we attempt to build simple Bootstrap templates that utilize
-    the code Bootstap CSS without a lot of customization. Tia cor magni dolores
-    eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
-    dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia
-    non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam
-    quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
-    ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
-    <hr class="col-md-12">
+            <li><a href="#c1">Content 1<i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#c2">Content 2 <i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#c3">Content 3<i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#c4">Content 4<i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#c5">Content 5<i class="fa fa-chevron-right pull-right"></i></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-9" id="mycontent">
+        <div id="c1">
+          <h2 class="">Content 1</h2>
+          At Bootply we attempt to build simple Bootstrap templates that utilize
+          the code Bootstap CSS without a lot of customization. Tia cor magni dolores
+          eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
+          dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia
+          non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam
+          quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
+          ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
+          <hr class="col-md-12">
+        </div>
+        <div id="c2">
+          <h2>Content 2</h2>
+          Rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+          beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
+          sit aspernatur aut odit aut fugit, sed quia cor magni dolores eos qui ratione
+          voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
+          quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
+          eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+          Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
+          laboriosam, nisi ut
+          <hr class="col-md-12">
+        </div> <div id="c3">   
+        <h2 class="">Content 3</h2>
+        Rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+        beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
+        sit aspernatur aut odit aut fugit, sed quia cor magni dolores eos qui ratione
+        voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
+        quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
+        eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+        Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
+        laboriosam, nisi ut
+        <hr class="col-md-12">
+      </div><div id="c4">
+      <h2 class="">Content 4</h2>
+      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+      doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+      veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
+      ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+      cor magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+      quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
+      velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
+      magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
+      exercitationem ullam corporis suscipit laboriosam, nisi ut
+    </div><div id="c5" style="min-height:500px;">
+    <h2 class="">Content 5</h2>
+    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+    doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+    veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
+    ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+    cor magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+    quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
+    velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
+    magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
+    exercitationem ullam corporis suscipit laboriosam, nisi ut
   </div>
-  <div id="c2">
-    <h2>Content 2</h2>
-    Rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
-    beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-    sit aspernatur aut odit aut fugit, sed quia cor magni dolores eos qui ratione
-    voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-    quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
-    eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-    Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
-    laboriosam, nisi ut
-    <hr class="col-md-12">
-  </div> <div id="c3">   
-  <h2 class="">Content 3</h2>
-  Rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
-  beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-  sit aspernatur aut odit aut fugit, sed quia cor magni dolores eos qui ratione
-  voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-  quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
-  eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-  Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
-  laboriosam, nisi ut
-  <hr class="col-md-12">
-</div><div id="c4">
-<h2 class="">Content 4</h2>
-Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
-ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-cor magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
-magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-exercitationem ullam corporis suscipit laboriosam, nisi ut
-</div><div id="c5" style="min-height:500px;">
-<h2 class="">Content 5</h2>
-Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
-ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-cor magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
-magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-exercitationem ullam corporis suscipit laboriosam, nisi ut
-</div>
 </div>
 </div>
 </div>
