more additions to faq

--- a/resources/stage/web/FAQ.html
+++ b/resources/stage/web/FAQ.html
@@ -79,7 +79,7 @@
         <li><a href="userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                <li><a href="#logout" class="hide">Log Out</a></li> -->
-                             <li class="dropdown">
+               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="about">About Bitpieces</a></li>
@@ -131,78 +131,186 @@
       <div class="col-md-3">
         <div class="affix" id="sidebar" role="complementary">
           <ul class="nav nav-tabs nav-stacked affix nav-list" id="mynav" data-spy="affix" data-offset-top="280">
-            <li><a href="#c1">Content 1<i class="fa fa-chevron-right pull-right"></i></a></li>
-            <li><a href="#c2">Content 2 <i class="fa fa-chevron-right pull-right"></i></a></li>
-            <li><a href="#c3">Content 3<i class="fa fa-chevron-right pull-right"></i></a></li>
-            <li><a href="#c4">Content 4<i class="fa fa-chevron-right pull-right"></i></a></li>
-            <li><a href="#c5">Content 5<i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#what_is_bitpieces">What is Bitpieces?<i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#what_are_pieces">What are pieces? <i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#what_is_a_creator">What is a creator?<i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#what_are_rewards">What are rewards?<i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#why_are_rewards_mandatory">Why are rewards mandatory?<i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#how_are_rewards_calculated">How are rewards calculated?  <i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#does_price_affect_rewards">Does price affect rewards?<i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#how_do_i_know_if_a_creator_is_safe">How do I know if a creator is safe?<i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#how_safe_is_bitpieces">How safe is Bitpieces?<i class="fa fa-chevron-right pull-right"></i></a></li>
           </ul>
         </div>
       </div>
       <div class="col-md-9" id="mycontent">
-        <div id="c1">
-          <h2 class="">Content 1</h2>
-          At Bootply we attempt to build simple Bootstrap templates that utilize
-          the code Bootstap CSS without a lot of customization. Tia cor magni dolores
-          eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
-          dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia
-          non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam
-          quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
-          ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
-          <hr class="col-md-12">
+        <div id="what_is_bitpieces">
+          <h2 class="">What is Bitpieces?</h2>
+          Bitpieces is a crowd-funding platform to get projects off the ground. Instead of promising
+          a product after a funding goal is met, a <a href="#what_is_a_creator">creator</a> issues 
+          <a href="#what_are_pieces">pieces</a>, at a certain price per piece, and promises 
+          <a href="#what_are_rewards">rewards</a> for owning pieces. Rewards grow continuously over time, 
+          from the moment they are bought. You can see how rewards are calculated 
+          <a href="#how_are_rewards_calculated">
+            here</a>.
+            <hr class="col-md-12">
+          </div>
+
+          <div id="what_are_pieces">
+            <h2>What are pieces?</h2>
+            Pieces are little entities guaranteeing you rewards from a creator. In a sense,
+            they represent your contribution to a creator's brand. When you buy pieces from a 
+            <a href="#what_is_a_creator"> creator</a>, you are helping them fund their work.
+            As their brand becomes more(or less)
+            valuable, your pieces may rise or fall in value, based on the their brand strength,
+            popularity, or supply and demand. However, the <a href="#what_are_rewards">rewards</a>
+            you collect are unaffected by changes in the price or value of your pieces. 
+            <br><br>Once you own pieces from a creator, you can <a href="#what_are_bids_and_asks">bid,
+            and ask</a>, to sell your pieces on an open market.
+            <hr class="col-md-12">
+          </div> 
+          <div id="what_is_a_creator">   
+            <h2 class="">What is a creator?</h2>
+            A creator is the term Bitpieces uses to refer to the content-creators who 
+            are issuing pieces to raise funds.
+            <hr class="col-md-12">
+          </div>
+          <div id="what_are_rewards">
+            <h2 class="">What are rewards?</h2>
+            Rewards are what content-creators pay to their funders. They usually start out
+            miniscule, but as their project generates profits, they can change the reward
+            to increase the value of their brand. Bitpieces differs from most systems in 
+            that rewards are continuous; from the moment pieces are purchased, they start
+            generating <a href="#how_are_rewards_calculated">rewards</a>. There are no specific dates at which rewards are payed out, 
+            they can be withdrawn at any time.
+            <hr class="col-md-12">
+          </div>
+          <div id="why_are_rewards_mandatory">
+            <h2 class="">Why are rewards mandatory?</h2>
+              Rewards are mandatory to make Bitpieces more secure for both creators and funders. 
+              <br><br>
+              It doesn't seem to make sense that 
+              a creator would want to give any of the money they raise back to their funders, especially
+              at first; but it is necessary to establish a <b>history of trust</b> between the two. 
+              People fund projects because they are fans, but also because they want to reap the rewards of
+              seeing their favorite brands and projects grow; and projects that give nothing back to 
+              their funders don't instill trust.
+              When you can see a plot over time of increasing rewards to funders, no matter how small,
+              it helps to build trust. 
+
+              <br><br>
+              Creators who are just starting out should choose a miniscule reward, perhaps around 0.5-1% / year. 
+              Using the <a href="https://en.wikipedia.org/wiki/Rule_of_72">rule of 72</a>, a 0.5% return
+              means that you can pay rewards to funders for ~70 years, making no profit, 
+              and still have half of the funds you raised. Adjusted for inflation, the average growth per year 
+              is about 2.7%, so a reward far above this is not advised.
+            <hr class="col-md-12">
+          </div>
+          <div id="how_are_rewards_calculated">
+            <h2 class="">How are rewards calculated?</h2>
+            Mathematically, rewards are a rate over time, given as reward / piece / year.
+            A creator can choose to change their reward, if their project starts earning more
+            or less profits.
+            <br><br> 
+            As an example, if a creator issues 5000 pieces at 1 USD per piece, they might
+            make their reward rate at .01 USD / piece / year, meaning a 1% reward yield. If a funder,
+            buys 500 pieces for $500 dollars total, after one year, they will have earned 5$ in rewards.
+            If the price per pieces stays roughly the same, their value after 1 year will be at
+            $505 dollars. 
+
+            <hr class="col-md-12">
+          </div>
+
+          <div id="does_price_affect_rewards">
+            <h2 class="">Does price affect rewards?</h2>
+            No. Since rewards are a rate of reward / <b>piece</b> / year, the price of the piece will not
+            affect how much rewards are earned. However, a creator that provides a stable
+            reward to their funders, will likely have the value of their pieces rise. Likewise,
+            A creator who consistently lowers their rewards will likely have the value of their
+            pieces decline. 
+
+            <hr class="col-md-12">
+          </div>
+
+
+
+          <div id="how_do_i_know_if_a_creator_is_safe">
+            <h2 class="">How do I know if a creator is safe?</h2>
+            There are 5 safety measures Bitpieces has in place to protect creators and their funders.
+
+            <ul>
+              <li> 
+                <h3> Verification</h3>
+                Creators can officially link their content to their Bitpieces creator account. 
+                Creators who have their official content linked to their account, are likely to be more
+                trustworthy, because they wouldn't want to alienate their funders and fans. 
+                <br><br>
+                Unverified creators are considered <b>very unsafe</b>; they could be trying to impersonate another
+                person in order to abscond with funds.
+              </li>
+              <li>
+                <h3> Mandatory rewards</h3>
+                One of the oddities of Bitpieces, is this question: If a creator is trying to raise money, 
+                then why should they be forced to reward their creators right away?
+                <br><br>
+                The answer is this: security. Rewards, no matter how miniscule the amount, help to establish 
+                a <a href="why_are_rewards_mandatory">history of trust</a>. When you see that a creator has
+                consistently paid their funders rewards, and has a history of increasing that amount, no matter
+                how tiny it started off, it builds trust.
+              </li>
+              <li>
+                <h3> Creators safety ratings</h3>
+                Since Bitpieces hosts creators funds, we know how long, given what they have currently in their 
+                account, they can safely pay rewards to their funders. A safety rating of 10 means that a creator
+                can safely pay 10 years of rewards to their funders, given what they currently have in their account. 
+                When a creator makes a potential withdrawal, their post-withdrawal safety rating is displayed. 
+                A creator who withdraws too much money, finds that their safety rating will also drop. 
+                A plot of safety rating over time is visible from the creator's overview.
+                <br><br>
+                A history of safety ratings of <b>greater than 5</b> is considered safe.
+                <br><br>
+
+                Mathematically, creators safety is calculated as : Safety = creators funds/(reward/piece/year * 
+                pieces owned) . 
+              </li>
+              <li>
+                <h3> Open discussion threads </h3>
+                In order to increase a dialog between creators and their funders, every creator's page has an
+                embedded disqus thread. This can be used for answering questions, requesting content, or 
+                giving updates. <b>Unresponsive</b> or unforthcoming creators are considered unsafe. 
+              </li>
+              <li>
+                <h3> Transparency</h3>
+                All creators activities, whether it be withdrawing funds, changing rewards, or issuing pieces,
+                are visible on their main page. You can see their entire transaction and funding history, and make
+                sure they are making safe decisions with their funders money.
+              </li>
+            </ul>
+
+
+            <hr class="col-md-12">
+          </div>
+
+
+          <div id="how_safe_is_bitpieces" style="min-height:500px;">
+            <h2 class="">How safe is Bitpieces?</h2>
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+            doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+            veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
+            ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+            cor magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+            quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
+            velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
+            magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
+            exercitationem ullam corporis suscipit laboriosam, nisi ut
+          </div>
         </div>
-        <div id="c2">
-          <h2>Content 2</h2>
-          Rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
-          beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-          sit aspernatur aut odit aut fugit, sed quia cor magni dolores eos qui ratione
-          voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-          quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
-          eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-          Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
-          laboriosam, nisi ut
-          <hr class="col-md-12">
-        </div> <div id="c3">   
-        <h2 class="">Content 3</h2>
-        Rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
-        beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-        sit aspernatur aut odit aut fugit, sed quia cor magni dolores eos qui ratione
-        voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-        quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
-        eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-        Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
-        laboriosam, nisi ut
-        <hr class="col-md-12">
-      </div><div id="c4">
-      <h2 class="">Content 4</h2>
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-      doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-      veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
-      ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-      cor magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-      quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-      velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
-      magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-      exercitationem ullam corporis suscipit laboriosam, nisi ut
-    </div><div id="c5" style="min-height:500px;">
-    <h2 class="">Content 5</h2>
-    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-    doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-    veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
-    ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-    cor magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-    quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-    velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
-    magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-    exercitationem ullam corporis suscipit laboriosam, nisi ut
+      </div>
+    </div>
+
+
+
   </div>
-</div>
-</div>
-</div>
-
-
-
-</div>
 
 
 
